apps/base/mailpit/middleware-auth.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: mailpit-auth
  namespace: mailpit
spec:
  basicAuth:
    secret: mailpit-webui-auth
