apps/base/mailpit/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailpit
  namespace: mailpit
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: traefik-security-headers@kubernetescrd,mailpit-mailpit-auth@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - mailpit.shublab.com
      secretName: shublab-wildcard-tls
  rules:
    - host: mailpit.shublab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mailpit
                port:
                  number: 8025
